fixed header on mobile menu

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -307,6 +307,9 @@
     max-width: 576px
     width: 90%
   .navbar
+    &-container
+      max-width: 100%
+      width: 100%
     &-mobile
       &--fixed
         position: fixed
@@ -351,6 +354,7 @@
         &-button
           display: flex
     &-top
+      padding: 37px
       &--hidden
         opacity: 0
     &-menu
